[gd_scene load_steps=5 format=2]

[ext_resource path="res://Menu-UI/5x5-pixel-variant/5x5-pixel-variant.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Menu-UI/Menu.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 50
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 1 )

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = 124.0
margin_top = 82.0
margin_right = 854.0
margin_bottom = 206.0
color = Color( 0.478431, 0.478431, 0.478431, 1 )

[node name="Label" type="Label" parent="."]
margin_left = 124.0
margin_top = 82.0
margin_right = 854.0
margin_bottom = 206.0
custom_fonts/font = SubResource( 1 )
text = "RUSTY HAND"
align = 1
valign = 1

[node name="New Game" type="Button" parent="."]
margin_left = 424.845
margin_top = 323.402
margin_right = 588.845
margin_bottom = 372.402
custom_fonts/font = SubResource( 2 )
text = "NEW GAME"

[node name="Continue" type="Button" parent="."]
margin_left = 425.638
margin_top = 388.485
margin_right = 589.638
margin_bottom = 437.485
custom_fonts/font = SubResource( 2 )
text = "CONTINUE"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Quit" type="Button" parent="."]
margin_left = 425.373
margin_top = 455.684
margin_right = 589.373
margin_bottom = 504.684
custom_fonts/font = SubResource( 2 )
text = "QUIT"
[connection signal="pressed" from="New Game" to="." method="_on_New_Game_pressed"]
[connection signal="pressed" from="Continue" to="." method="_on_Continue_pressed"]
[connection signal="pressed" from="Quit" to="." method="_on_Quit_pressed"]
