[gd_scene load_steps=7 format=2]

[ext_resource path="res://Menu-UI/5x5-pixel-variant/5x5-pixel-variant.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Menu-UI/Menu.gd" type="Script" id=2]
[ext_resource path="res://Menu-UI/Score.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 50
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 1 )

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = 148.425
margin_top = 144.214
margin_right = 878.425
margin_bottom = 268.214
color = Color( 0.478431, 0.478431, 0.478431, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="ColorRect"]
margin_right = 730.0
margin_bottom = 124.0
custom_fonts/font = SubResource( 1 )
text = "YOU WIN!"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="Button" parent="."]
margin_left = 424.845
margin_top = 432.527
margin_right = 588.845
margin_bottom = 481.527
custom_fonts/font = SubResource( 2 )
text = "MENU"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score" type="Label" parent="."]
margin_left = 148.425
margin_top = 276.295
margin_right = 878.425
margin_bottom = 400.295
custom_fonts/font = SubResource( 3 )
text = "10 LITRES"
align = 1
valign = 1
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Menu" to="." method="_on_Menu_pressed"]
